--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,9 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <rb-recipe-list-item [recipe]="recipe" (click)="onSelected(recipe)" ></rb-recipe-list-item>
+      <rb-recipe-list-item
+          *ngFor="let recipe of recipes"
+          [recipe]="recipe" (click)="onSelected(recipe)" ></rb-recipe-list-item>
     </ul>
   </div>
 </div>
