up to 69 dependency injection

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,11 +14,14 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" rbDropdown>
-          <a href="#" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
+            User Action Menu
+            <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu">
             <li><a href="#">Login</a></li>
             <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Something else</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Logout</a></li>
           </ul>
