--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -8,7 +8,7 @@
     <h1>{{selectedRecipe?.name}}</h1>
   </div>
   <div class="col-xs-12">
-    <button class="btn btn-success">To Shopping List</button>
+    <button class="btn btn-success" (click)="addToShoppingList()">To Shopping List</button>
     <button class="btn btn-primary">Edit</button>
     <button class="btn btn-danger">Delete</button>
   </div>
@@ -21,6 +21,9 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <b>Ingredients</b>
+    <ul>
+      <a class="list-group-item" style="" *ngFor="let item of selectedRecipe?.ingredients">{{item.name}} ({{item.amount}})</a>
+    </ul>
   </div>
 </div>
