--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,7 @@
     <rb-shopping-list-add></rb-shopping-list-add>
     <hr>
     <ul>
-      <a class="list-group-item" style="" *ngFor="let item of items"></a>
+      <a class="list-group-item" style="" *ngFor="let item of items">{{item.name}} ({{item.amount}})</a>
     </ul>
   </div>
 </div>
