--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <a class="btn btn-success">New Recipe</a>
+    <a class="btn btn-success" routerLink="new">New Recipe</a>
   </div>
 </div>
 
@@ -8,8 +8,10 @@
   <div class="col-xs-12">
     <ul class="list-group">
       <rb-recipe-list-item
-          *ngFor="let recipe of recipes"
-          [recipe]="recipe" (click)="onSelected(recipe)" ></rb-recipe-list-item>
+          *ngFor="let recipe of recipes; let i = index"
+          [recipe]="recipe"
+          [recipeId]="i" >
+      </rb-recipe-list-item>
     </ul>
   </div>
 </div>
