--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,9 +1,14 @@
 <div class="row">
   <div class="col-xs-10">
-    <rb-shopping-list-add></rb-shopping-list-add>
+    <rb-shopping-list-add [item]="selectedItem" (cleared)="onCleared()"></rb-shopping-list-add>
     <hr>
     <ul>
-      <a class="list-group-item" style="" *ngFor="let item of items">{{item.name}} ({{item.amount}})</a>
+      <a
+          class="list-group-item"
+          style=""
+          *ngFor="let item of items"
+          (click)="onSelectItem(item)"
+      >{{item.name}} ({{item.amount}})</a>
     </ul>
   </div>
 </div>
