database storage completed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,16 +14,20 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" rbDropdown>
-          <a href="#" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
-            User Action Menu
-            <span class="caret"></span>
+          <a
+              class="dropdown-toggle"
+              role="button"
+              aria-haspopup="true"
+              aria-expanded="false"
+          >
+            Database Management <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><a (click)="onStore()" style="cursor:pointer">Store Recipes</a></li>
+            <li><a (click)="onFetch()" style="cursor:pointer">Retrive Recipes</a></li>
             <li><a href="#">Something else</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="#">Do nothing</a></li>
           </ul>
         </li>
       </ul>
